# CPP_Scratch

./: .gitignore  CMakeLists.txt  README.md
Projects/: CMakeLists.txt
Projects/AVLTree/: CMakeLists.txt  README.md  avltree.cpp  avltreeVer.h.in
Projects/BinaryTreeWithPointers/: CMakeLists.txt  README.md  binaryTree.cpp  binaryTreeVer.h.in
Projects/CustomLinkedList/: CMakeLists.txt  README.md  customLinkedList.cpp  customLinkedListVer.h.in
Projects/CustomQueueWithPointers/: CMakeLists.txt  README.md  customQueue.cpp  customQueueVer.h.in
Projects/CustomStackWithPointers/: CMakeLists.txt  README.md  customStack.cpp  customStackVer.h.in
Projects/TestUtilsTests/: CMakeLists.txt  README.md  testUtilsTests.cpp  testUtilsTestsVer.h.in
Projects/UniqueIdTest/: CMakeLists.txt  CompileTimeStr.h  README.md  uniqueTest.cpp  uniqueTestVer.h.in
Projects/ValidateTestObjects/: CMakeLists.txt  testObjectHeaders.cpp  testObjectHeadersVer.h.in
Projects/template/: CMakeLists.txt.tmpl  README.md.tmpl  projectTemplate.cpp.tmpl  projectTemplateVer.h.in.tmpl
common/include/NaM/: identifiable.h  testUtils.h
common/include/NaM/TestObjects/: dummyData.h  statBase.h  testObjects.h  testPoint2D.h
scripts/: newProject.sh
